ai_gen_test/runs/20260618_101330_444_swagger_code_log_basic_r01/pytest_reports/test_get_system_user_profile_checkpassword.txt
FFF                                                                      [100%]
================================== FAILURES ===================================
____________ test_checkPassword[wrong_password-403-response_body0] ____________
runs\20260618_101330_444_swagger_code_log_basic_r01\generated_tests\test_get_system_user_profile_checkpassword.py:24: in test_checkPassword
    assert response.status_code == expected_status_code
E   assert 200 == 403
E    +  where 200 = <Response [200]>.status_code
___________ test_checkPassword[correct_password-200-response_body1] ___________
runs\20260618_101330_444_swagger_code_log_basic_r01\generated_tests\test_get_system_user_profile_checkpassword.py:25: in test_checkPassword
    assert response_json["code"] == response_body["code"]
           ^^^^^^^^^^^^^^^^^^^^^
E   TypeError: 'bool' object is not subscriptable
_____________________ test_checkPassword_invalid_password _____________________
runs\20260618_101330_444_swagger_code_log_basic_r01\generated_tests\test_get_system_user_profile_checkpassword.py:36: in test_checkPassword_invalid_password
    assert response.status_code == 403
E   assert 200 == 403
E    +  where 200 = <Response [200]>.status_code
=========================== short test summary info ===========================
FAILED runs/20260618_101330_444_swagger_code_log_basic_r01/generated_tests/test_get_system_user_profile_checkpassword.py::test_checkPassword[wrong_password-403-response_body0]
FAILED runs/20260618_101330_444_swagger_code_log_basic_r01/generated_tests/test_get_system_user_profile_checkpassword.py::test_checkPassword[correct_password-200-response_body1]
FAILED runs/20260618_101330_444_swagger_code_log_basic_r01/generated_tests/test_get_system_user_profile_checkpassword.py::test_checkPassword_invalid_password
3 failed in 0.17s
